--- a/city-register/src/main/webapp/index.html
+++ b/city-register/src/main/webapp/index.html
@@ -1,3 +1,14 @@
-<h3>Hello world new</h3>
+<html>
 
-<a href="checkPerson">Check person</a>
+<head>
+    <meta charset="UTF-8"/>
+</head>
+
+<body>
+    <form action="checkPerson" method="get">
+        Surname:<input type="text" name="surname"/>
+        <input type="submit" value="GO"/>
+    </form>
+</body>
+
+</html>
